@@ -1,3 +1,4 @@
+ - add char_set parameter to escape modifier (Loading, monte)
  - fix notice in debug security check (Drakla, monte)
  - return valid reference in get_template_vars() when given var is
    non-existant (monte)
